--- a/AzureNameValidator/AzureNameValidator.csproj
+++ b/AzureNameValidator/AzureNameValidator.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
@@ -8,9 +7,10 @@
     <RepositoryUrl>https://github.com/mathiasi/AzureNameValidator</RepositoryUrl>
     <PackageTags>azure;validation</PackageTags>
 	<PackageLicenseFile>LICENSE</PackageLicenseFile>
+	<Version>1.0.0</Version>
   </PropertyGroup>
-
+	
   <ItemGroup>
-	<None Include="../LICENSE" Pack="true" PackagePath=""/>
+	<None Include="../LICENSE" Pack="true" PackagePath="" />
   </ItemGroup>
 </Project>
